--- a/index.html
+++ b/index.html
@@ -182,6 +182,10 @@
     </nav>
 
 
+    <!-- === STICKY CHAT === -->
+    <img class="hover:cursor-pointer fixed bottom-5 right-5 z-50 w-12 md:w-16 lg:w-20" src="/assets/chat.f5421ec5.png" alt="chat">
+
+
     <!-- === INTRO === -->
     <section
         class="bg-orange-100 text-blue-900 space-y-4 md:space-y-5 lg:space-y-5 px-3 py-7 flex flex-col items-center">
