--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
 
     <!-- === HOW MANY === -->
-    <section class="space-y-5 pt-5 pb-7 md:pb-10 text-blue-900">
+    <section class="space-y-5 pt-5 md:pt-10 text-blue-900">
         <h1 class="font-bold text-2xl sm:text-3xl lg:text-5xl text-center pb-7 sm:p-7 md:p-10 lg:p-14">“Pure <span
                 class="text-orange-500">Hardwork</span>, No
             Shortcuts!”</h1>
@@ -442,9 +442,9 @@
             slidesPerView: 1,
             loop: true,
             grabCursor: true,
-            spaceBetween: 50,
+            spaceBetween: 40,
             autoplay: {
-                delay: 3000,
+                delay: 2000,
             },
             breakpoints: {
                 640: {
