--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
                     </div>
                 </section>
                 <!-- Courses Dropdown Section (Ends Here) -->
-                <span class="hover:cursor-pointer">One Neuron</span>
-                <span class="hover:cursor-pointer">Job Portal</span>
-                <span class="hover:cursor-pointer">Internship Portal</span>
-                <span class="hover:cursor-pointer">Become an Affiliate</span>
-                <span class="hover:cursor-pointer">Hall of Fame</span>
-                <span class="hover:cursor-pointer">Blog</span>
+                <span class="hover:cursor-pointer hover:scale-105">One Neuron</span>
+                <span class="hover:cursor-pointer hover:scale-105">Job Portal</span>
+                <span class="hover:cursor-pointer hover:scale-105">Internship Portal</span>
+                <span class="hover:cursor-pointer hover:scale-105">Become an Affiliate</span>
+                <span class="hover:cursor-pointer hover:scale-105">Hall of Fame</span>
+                <span class="hover:cursor-pointer hover:scale-105">Blog</span>
                 <!-- Company Dropdown Section (Starts Here) -->
                 <section class=" text-blue-900 text-center flex flex-col items-center group relative w-fit">
                     <div class="text-center text-base font-semibold">
@@ -183,7 +183,8 @@
 
 
     <!-- === STICKY CHAT === -->
-    <img class="hover:cursor-pointer fixed bottom-5 right-5 z-50 w-12 md:w-16 lg:w-20" src="/assets/chat.f5421ec5.png" alt="chat">
+    <img class="hover:cursor-pointer fixed bottom-5 right-5 z-50 w-12 md:w-16 lg:w-20" src="/assets/chat.f5421ec5.png"
+        alt="chat">
 
 
     <!-- === INTRO === -->
@@ -201,32 +202,34 @@
 
 
     <!-- === HOW MANY === -->
-    <section class="space-y-5 pt-5 md:pt-10 text-blue-900">
-        <h1 class="font-bold text-2xl sm:text-3xl lg:text-5xl text-center pb-7 sm:p-7 md:p-10 lg:p-14">“Pure <span
-                class="text-orange-500">Hardwork</span>, No
-            Shortcuts!”</h1>
+    <section class="bg-slate-50 py-20 m-3 border-2 rounded-xl space-y-10">
+        <div class="text-blue-900">
+            <h1 class="font-bold text-2xl sm:text-3xl lg:text-5xl text-center">“Pure <span
+                    class="text-orange-500">Hardwork</span>, No
+                Shortcuts!”</h1>
+        </div>
+        <div class="text-blue-900 md:flex md:items-end md:justify-around">
+            <div class="flex flex-col items-center justify-center space-y-1 sm:space-y-2 md:space-y-3 mt-10">
+                <img class="w-64" src="/assets/courses.134859bc.svg" alt="courses">
+                <h1 class="text-orange-500 font-bold text-2xl md:text-3xl">400+</h1>
+                <h1 class="font-semibold text-lg lg:text-2xl">Different Courses</h1>
+            </div>
+            <div class="flex flex-col items-center space-y-1 sm:space-y-2 md:space-y-3 mt-10">
+                <img class="w-52" src="/assets/enrolled.7f1c1d56.svg" alt="enrolled">
+                <h1 class="text-orange-500 font-bold text-2xl md:text-3xl">400000+</h1>
+                <h1 class="font-semibold text-lg lg:text-2xl">Students Enrolled</h1>
+            </div>
+            <div class="flex flex-col items-center space-y-1 sm:space-y-2 md:space-y-3 mt-10">
+                <img class="w-48" src="/assets/transition.74997a0a.svg" alt="transition">
+                <h1 class="text-orange-500 font-bold text-2xl md:text-3xl">10000+</h1>
+                <h1 class="font-semibold text-lg lg:text-2xl">Successful Transition</h1>
+            </div>
+        </div>
     </section>
-    <div class="text-blue-900 md:flex md:items-center md:justify-around md:w-full pb-5 md:pb-10">
-        <div class="flex flex-col items-center space-y-1 sm:space-y-2 md:space-y-3 my-5">
-            <img class="w-[66.5%] -mb-3 items-center" src="/assets/courses.134859bc.svg" alt="courses">
-            <h1 class="text-orange-500 font-bold text-2xl md:text-3xl text-center">400+</h1>
-            <h1 class="font-semibold text-lg lg:text-2xl text-center">Different Courses</h1>
-        </div>
-        <div class="flex flex-col items-center space-y-1 sm:space-y-2 md:space-y-3 my-10">
-            <img class="w-[49%]" src="/assets/enrolled.7f1c1d56.svg" alt="enrolled">
-            <h1 class="text-orange-500 font-bold text-2xl md:text-3xl text-center">400000+</h1>
-            <h1 class="font-semibold text-lg lg:text-2xl text-center">Students Enrolled</h1>
-        </div>
-        <div class="flex flex-col items-center space-y-1 sm:space-y-2 md:space-y-3 my-10">
-            <img class="w-[55%]" src="/assets/transition.74997a0a.svg" alt="transition">
-            <h1 class="text-orange-500 font-bold text-2xl md:text-3xl text-center">10000+</h1>
-            <h1 class="font-semibold text-lg lg:text-2xl text-center">Successful Transition</h1>
-        </div>
-    </div>
 
 
     <!-- === COMPANIES (SLIDER) === -->
-    <section class="mt-10 mb-20 md:mb-28 mx-1 md:mx-5 lg:mx-10">
+    <section class="mb-20 md:mb-28 mx-1 md:mx-5 lg:mx-10">
         <div
             class="text-center text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold text-blue-900 mb-2 sm:mb-3 md:mb-5">
             <h1 class="bg-orange-100 w-full pt-1 pb-1.5 rounded-lg font-serif"><span class="text-orange-500">“</span>OUR
